Fix navigation arrow color in dark mode

--- a/source/theme/styles/components/_main-navigation.scss
+++ b/source/theme/styles/components/_main-navigation.scss
@@ -298,7 +298,7 @@ ul:last-child > .title-bar__item:first-child {
   }
 
   .title-bar__item--active:before {
-    background: #555;
+    background: #fff;
   }
 
   .title-bar__item--active:after {
